[gd_scene load_steps=17 format=2]

[ext_resource path="res://shaders/depth_getter_accu.shader" type="Shader" id=1]
[ext_resource path="res://shaders/depth_getter.shader" type="Shader" id=2]
[ext_resource path="res://shaders/snow.shader" type="Shader" id=3]
[ext_resource path="res://snow_noise_tex.tres" type="Texture" id=4]
[ext_resource path="res://terrain/terrain.gd" type="Script" id=5]
[ext_resource path="res://snow_normal_tex.tres" type="Texture" id=7]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("vp_snow_objects")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/accu_texture = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 64.1, 64.1 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_unshaded = true
params_cull_mode = 1

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 64, 64 )
subdivide_width = 63
subdivide_depth = 63

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("vp_snow_objects")

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("vp_terrain")

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/avg_snow_height = 0.4
shader_param/min_snow_height = 0.05
shader_param/max_snow_variance = 0.2
shader_param/zero_out = 0.2
shader_param/max_terrain_height = 50.0
shader_param/snow_height_map = ExtResource( 4 )
shader_param/snow_objects = SubResource( 7 )
shader_param/terrain = SubResource( 8 )
shader_param/normal_map = ExtResource( 7 )

[sub_resource type="PlaneMesh" id=10]
custom_aabb = AABB( -32, -32, -32, 64, 64, 64 )
size = Vector2( 64, 64 )
subdivide_width = 639
subdivide_depth = 639

[node name="terrain" type="StaticBody"]
collision_layer = 2
script = ExtResource( 5 )

[node name="vp_snow_objects" type="Viewport" parent="."]
size = Vector2( 640, 640 )
keep_3d_linear = true
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="vp_snow_objects"]

[node name="Camera" type="Camera" parent="vp_snow_objects/Spatial"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.2, 0 )
cull_mask = 2
projection = 1
size = 64.1

[node name="depth_projection" type="MeshInstance" parent="vp_snow_objects/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
layers = 2
material_override = SubResource( 2 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="vp_terrain" type="Viewport" parent="."]
size = Vector2( 640, 640 )
keep_3d_linear = true
render_target_update_mode = 1

[node name="Spatial" type="Spatial" parent="vp_terrain"]

[node name="Camera" type="Camera" parent="vp_terrain/Spatial"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.2, 0 )
cull_mask = 4
projection = 1
size = 64.1

[node name="depth_projection" type="MeshInstance" parent="vp_terrain/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
layers = 4
material_override = SubResource( 4 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="terrain_mesh" type="MeshInstance" parent="."]
layers = 4
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="snow_mesh" type="MeshInstance" parent="."]
material_override = SubResource( 9 )
cast_shadow = 0
mesh = SubResource( 10 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
